--- a/backend/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/backend/spring-boot-ecommerce/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 server.port=8098
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/full-stack-ecommerce?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Baraklio
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 spring.data.rest.base-path=/api
+logging.level.org.springframework.web=TRACE
+logging.level.org.hibernate=TRACE
+spring.jpa.hibernate.ddl-auto=update
+
+allowed.origins=https://localhost:4200
+config.data.rest.base-path=/api
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+spring.data.rest.detection-strategy=annotated
+
+okta.oauth2.client-id=0oa4vjrzeq56oX1mP5d7
+okta.oauth2.client-secret=aqeKarxecKMDxedAzGM9P6oWT6NeFQrfWAB8r01n
+okta.oauth2.issuer=https://dev-41942346.okta.com/oauth2/default
+
